force-app/main/default/objects/Strategic_Priority__c/Strategic_Priority__c.object-meta.xml
<CustomObject>
    <description>used for Account Plan</description>
    <label>Strategic Priority</label>
    <nameField>
        <displayFormat>SP{0}</displayFormat>
        <label>Strategic Priority Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Priorities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>