force-app/main/default/objects/Strategic_Priority__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>