force-app/main/default/objects/Strategic_Priority__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Goal</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>