force-app/main/default/objects/Strategic_Priority__c/fields/How__c.field-meta.xml
<CustomField>
    <fullName>How__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>