force-app/main/default/objects/Strategic_Priority__c/fields/Opportunity_Threat__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Threat__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity/Threat</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>