force-app/main/default/objects/Strategic_Priority__c/fields/Person_responsible__c.field-meta.xml
<CustomField>
    <fullName>Person_responsible__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Person responsible</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>