force-app/main/default/objects/Strategic_Priority__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requirements</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>