force-app/main/default/objects/Strategic_Priority__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Achieved</fullName>
            </value>
            <value>
                <fullName>Not achieved</fullName>
            </value>
            <value>
                <fullName>Changed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>